# CSCI406-Algobowl

./: CMakeLists.txt  README.md
docs/: paper.tex
misc/: scrape-data.js  solver.py  verifier.py
src/: common.hpp  helpers.cpp  helpers.hpp  helpers_test.cpp  input.cpp  input.hpp  input_test.cpp  output.cpp  output.hpp  output_test.cpp  simulation.cpp  simulation.hpp  simulation_test.cpp  solver.cpp  verifier.cpp
test/: 1-big-small-deg-in.txt  1-big-small-deg-out.txt  2-submission-in.txt  2-submission-out.txt  3-max-cycle-in.txt  3-max-cycle-out.txt  4-no-cycle-in.txt  5-one-cycle-in.txt  6-random-outdeg-in.txt  6-random-outdeg-out.txt
